изменил пути к изображению стрелок

--- a/css/blocks/_about.scss
+++ b/css/blocks/_about.scss
@@ -28,7 +28,7 @@
     }
 
     &:before{
-      content: url("/images/read-more-arrows.svg");
+      content: url("images/read-more-arrows.svg");
       display: inline-block;
       height: 24px;
       width: 24px;
