--- a/css/style.css
+++ b/css/style.css
@@ -495,7 +495,7 @@ h1, .h1 {
   }
 }
 .about__button:before {
-  content: url("/images/read-more-arrows.svg");
+  content: url("images/read-more-arrows.svg");
   display: inline-block;
   height: 24px;
   width: 24px;
