изменил размер отображения картинки на десктоп

--- a/css/blocks/_about.scss
+++ b/css/blocks/_about.scss
@@ -46,7 +46,7 @@
     @include mobile-above{
       border-radius: 6px;
       margin-top: 0;
-      width: 50%;
+      min-width: 50%;
     }
   }
 }
