изменил section на article

--- a/css/style.scss
+++ b/css/style.scss
@@ -10,6 +10,7 @@
 'blocks/header',
 'blocks/burger-button',
 'blocks/services-menu',
+'blocks/article',
 'blocks/section',
 'blocks/content',
 'blocks/menu',
