исправил структуру блоков с кнопками

--- a/css/blocks/_burger-button.scss
+++ b/css/blocks/_burger-button.scss
@@ -6,6 +6,18 @@
   }
 
   &:after{
+    background-color: var(--color-pink);
+    background-repeat: no-repeat;
+    background-position: center center;
+    border-radius: 50%;
+    display: inline-block;
+    aspect-ratio: 1;
+    width: 40px;
+    content: '';
+    background-image: url("/images/burger_button.svg");
+  }
+
+  &:before{
     @include mobile-above{
       background-color: var(--color-gray-light);
       content:'';
