исправил пути к иконкам для кнопок

--- a/css/blocks/_burger-button.scss
+++ b/css/blocks/_burger-button.scss
@@ -14,7 +14,7 @@
     aspect-ratio: 1;
     width: 40px;
     content: '';
-    background-image: url("/images/burger_button.svg");
+    background-image: url("../images/burger_button.svg");
   }
 
   &:before{
