--- a/css/blocks/_header.scss
+++ b/css/blocks/_header.scss
@@ -1,18 +1,23 @@
 .header{
 
   @include tablet-above{
-    display: none;
+    //display: none;
   }
 
   &__inner{
     background-color: #fff;
     align-items: center;
-    box-shadow: 0 0 0 1px #d9fff5;
     display: flex;
     padding: 18.59px 16px;
 
     @include mobile-above{
       padding: 18.59px 24px;
+    }
+
+    &--box-shadow{
+      &--bottom{
+        box-shadow: 0 0 0 1px #d9fff5;
+      }
     }
   }
 
@@ -36,5 +41,13 @@
   &__user-menu{
     column-gap: 16px;
     margin-left: auto;
+  }
+
+  &--hidden{
+    &--desktop{
+      @include tablet-above{
+        display: none;
+      }
+    }
   }
 }
