--- a/css/style.css
+++ b/css/style.css
@@ -285,15 +285,9 @@ h1, .h1 {
   }
 }
 
-@media (min-width: 1120px) {
-  .header {
-    display: none;
-  }
-}
 .header__inner {
   background-color: #fff;
   align-items: center;
-  box-shadow: 0 0 0 1px #d9fff5;
   display: flex;
   padding: 18.59px 16px;
 }
@@ -301,6 +295,9 @@ h1, .h1 {
   .header__inner {
     padding: 18.59px 24px;
   }
+}
+.header__inner--box-shadow--bottom {
+  box-shadow: 0 0 0 1px #d9fff5;
 }
 .header__logo {
   margin-left: 16.73px;
@@ -318,6 +315,11 @@ h1, .h1 {
 .header__user-menu {
   column-gap: 16px;
   margin-left: auto;
+}
+@media (min-width: 1120px) {
+  .header--hidden--desktop {
+    display: none;
+  }
 }
 
 .burger-button {
