--- a/css/menu-mobile/_sidebar-menu.scss
+++ b/css/menu-mobile/_sidebar-menu.scss
@@ -1,3 +1,8 @@
 .sidebar-menu{
-
+  background: #fff;
+  width: 320px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  box-shadow: 16px 0 52px 0 rgba(14, 24, 80, 0.2), -2px 0 4px 0 rgba(69, 79, 126, 0.02);
 }
