--- a/css/menu.scss
+++ b/css/menu.scss
@@ -10,4 +10,5 @@
   "blocks/header",
   "blocks/button",
   "blocks/primary-button",
-"menu-mobile/sidebar-menu";
+"menu-mobile/sidebar-menu",
+"menu-mobile/sidebar-header";
