--- a/css/menu.scss
+++ b/css/menu.scss
@@ -11,4 +11,5 @@
   "blocks/button",
   "blocks/primary-button",
 "menu-mobile/sidebar-menu",
-"menu-mobile/sidebar-header";
+"menu-mobile/sidebar-header",
+"menu-mobile/sidebar-navigation";
