--- a/css/style.css
+++ b/css/style.css
@@ -150,6 +150,13 @@ svg * {
     scroll-behavior: auto !important;
   }
 }
+/*
+   убираем синий квадрат при клике на мобильном устройстве по ссылкам и кнопкам
+*/
+* {
+  -webkit-tap-highlight-color: transparent;
+}
+
 @font-face {
   font-family: "TT Lakes";
   src: url("../fonts/TTLakes-Regular.woff2") format("woff2");
@@ -180,6 +187,9 @@ svg * {
   --color-gray-light: #eaeaea;
   --color-gray-links: #7e7e82;
   --font-family: "TT Lakes", sans-serif;
+  --font-weight-regular: 400;
+  --font-weight-medium: 700;
+  --font-weight-bold: 900;
   --h1-font-size: 28px;
   --border: 2px solid var(--color-aqua-light);
   --primary-button-height: 40px;
@@ -206,6 +216,8 @@ body {
   background-color: var(--color-bg-gray);
 }
 
+::before,
+::after,
 a,
 button,
 textarea,
@@ -282,14 +294,12 @@ h1, .h1 {
 }
 @media (hover: hover) {
   .primary-button:hover:after {
-    box-shadow: 0 0 5px 0;
-    border: 3px solid;
+    opacity: 0.5;
   }
 }
 @media (hover: none) {
   .primary-button:active:after {
-    box-shadow: 0 0 5px 0;
-    border: 3px solid;
+    opacity: 0.5;
   }
 }
 
