--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -9,6 +9,10 @@
 
   --font-family: "TT Lakes", sans-serif;
 
+  --font-weight-regular: 400;
+  --font-weight-medium: 700;
+  --font-weight-bold: 900;
+
   --h1-font-size: 28px;
 
   --border: 2px solid var(--color-aqua-light);
@@ -16,4 +20,5 @@
   --primary-button-height: 40px;
 
   --transition-duration: 0.2s;
+
 }
