--- a/css/menu-mobile/_sidebar-menu.scss
+++ b/css/menu-mobile/_sidebar-menu.scss
@@ -1,5 +1,7 @@
 .sidebar-menu{
   background: #fff;
+  display: flex;
+  flex-direction: column;
   min-height: 100vh;
   width: 320px;
   position: absolute;
