--- a/css/menu.css
+++ b/css/menu.css
@@ -342,6 +342,8 @@ h1, .h1 {
 
 .sidebar-menu {
   background: #fff;
+  display: flex;
+  flex-direction: column;
   min-height: 100vh;
   width: 320px;
   position: absolute;
