--- a/css/menu.scss
+++ b/css/menu.scss
@@ -10,6 +10,8 @@
   "blocks/header",
   "blocks/button",
   "blocks/primary-button",
-"menu-mobile/sidebar-menu",
-"menu-mobile/sidebar-header",
-"menu-mobile/sidebar-navigation";
+  "menu-mobile/sidebar-menu",
+  "menu-mobile/sidebar-header",
+  "menu-mobile/sidebar-navigation",
+  "menu-mobile/sidebar-footer",
+  "menu-mobile/lang-block";
