тилизовал блоки с брэндами

--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -6,6 +6,7 @@
   --color-bg-gray: #f8f8f8;
   --color-gray-light: #eaeaea;
   --color-gray-links: #7e7e82;
+  --color-section-border: #D9FFF5;
 
   --font-family: "TT Lakes", sans-serif;
 
@@ -21,4 +22,5 @@
 
   --transition-duration: 0.2s;
 
+  --section-padding-x: 24px;
 }
