--- a/css/brand-slider.scss
+++ b/css/brand-slider.scss
@@ -6,4 +6,8 @@
 'utils',
 'globals';
 
-@import "blocks/read-more-button";
+@import
+"blocks/read-more-button",
+"blocks/section",
+"blocks/brands",
+"blocks/secondary-button";
