--- a/css/_globals.scss
+++ b/css/_globals.scss
@@ -1,8 +1,9 @@
 body{
   font-family: var(--font-family);
-  font-weight: 500;
+  font-weight: var(--font-weight-regular);
   color: var(--color-text);
   background-color: var(--color-bg-gray);
+  letter-spacing: -0.2px;
 }
 ::before,
 ::after,
@@ -19,9 +20,13 @@ a{
   color: inherit;
 }
 
-h1,h2,h3,h4{
-  font-weight: 900;
+h1,h3,h4{
+  font-weight: var(--font-weight-bold);
 }
+h2{
+  font-weight: var(--font-weight-regular);
+}
+
 
 h1, .h1{
   font-size: var(--h1-font-size);
