--- a/css/blocks/_section.scss
+++ b/css/blocks/_section.scss
@@ -1,4 +1,23 @@
 .section{
+
+  &__inner{
+    border-top: 1px solid var(--color-section-border);
+  }
+  &__header{
+    background: linear-gradient(90deg, #f8f8f8 0%, #fff 100%);
+    padding: 16px 0 16px var(--section-padding-x);
+  }
+  &__title{
+    font-size: 16px;
+    text-transform: uppercase;
+  }
   &__body{
+    padding-inline: var(--section-padding-x);
+    padding-top: 24px;
+    padding-bottom: 34px;
+  }
+
+  &__read-more-button{
+    margin-top: 24px;
   }
 }
