--- a/css/brand-slider.css
+++ b/css/brand-slider.css
@@ -186,6 +186,7 @@ svg * {
   --color-bg-gray: #f8f8f8;
   --color-gray-light: #eaeaea;
   --color-gray-links: #7e7e82;
+  --color-section-border: #D9FFF5;
   --font-family: "TT Lakes", sans-serif;
   --font-weight-regular: 400;
   --font-weight-medium: 700;
@@ -194,6 +195,7 @@ svg * {
   --border: 2px solid var(--color-aqua-light);
   --primary-button-height: 40px;
   --transition-duration: 0.2s;
+  --section-padding-x: 24px;
 }
 
 .visually-hidden {
@@ -211,9 +213,10 @@ svg * {
 
 body {
   font-family: var(--font-family);
-  font-weight: 500;
+  font-weight: var(--font-weight-regular);
   color: var(--color-text);
   background-color: var(--color-bg-gray);
+  letter-spacing: -0.2px;
 }
 
 ::before,
@@ -231,8 +234,12 @@ a {
   color: inherit;
 }
 
-h1, h2, h3, h4 {
-  font-weight: 900;
+h1, h3, h4 {
+  font-weight: var(--font-weight-bold);
+}
+
+h2 {
+  font-weight: var(--font-weight-regular);
 }
 
 h1, .h1 {
@@ -262,6 +269,65 @@ h1, .h1 {
   display: inline-block;
   height: 24px;
   width: 24px;
+}
+
+.section__inner {
+  border-top: 1px solid var(--color-section-border);
+}
+.section__header {
+  background: linear-gradient(90deg, #f8f8f8 0%, #fff 100%);
+  padding: 16px 0 16px var(--section-padding-x);
+}
+.section__title {
+  font-size: 16px;
+  text-transform: uppercase;
+}
+.section__body {
+  padding-inline: var(--section-padding-x);
+  padding-top: 24px;
+  padding-bottom: 34px;
+}
+.section__read-more-button {
+  margin-top: 24px;
+}
+
+.brands {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  column-gap: 32px;
+  row-gap: 16px;
+  height: 160px;
+  overflow: hidden;
+}
+.brands__item {
+  align-items: center;
+  background: #fff;
+  border: 1px solid var(--color-gray-light);
+  border-radius: 6px;
+  justify-content: space-between;
+  box-sizing: border-box;
+  display: flex;
+  height: 72px;
+  padding-inline: 16px;
+}
+
+.secondary-button {
+  background: url("../../images/arrow-right.svg") no-repeat 50% 50%;
+  border-radius: 50%;
+  border: 2px solid var(--color-pink);
+  box-sizing: border-box;
+  height: 40px;
+  width: 40px;
+}
+@media (hover: hover) {
+  .secondary-button:hover {
+    opacity: 0.5;
+  }
+}
+@media (hover: none) {
+  .secondary-button:active {
+    opacity: 0.5;
+  }
 }
 
 /*# sourceMappingURL=brand-slider.css.map */
