--- a/css/blocks/_read-more-button.scss
+++ b/css/blocks/_read-more-button.scss
@@ -1,15 +1,39 @@
-.read-more-button{
+.read-more-button {
   font-weight: var(--font-weight-medium);
   @include reset-button;
 
-  @include hover{
+  @include hover {
     cursor: pointer;
     color: aqua;
   }
-  &:before{
+
+  &:before {
     content: url("../images/read-more-arrows.svg");
     display: inline-block;
     height: 24px;
     width: 24px;
+  }
+
+  &__second-text {
+    display: none;
+  }
+
+  &--show {
+    &.read-more-button {
+      &:before {
+        transform: rotate(180deg);
+      }
+    }
+
+    .read-more-button {
+
+      &__first-text {
+        display: none;
+      }
+
+      &__second-text {
+        display: inline;
+      }
+    }
   }
 }
