--- a/css/brand-slider.scss
+++ b/css/brand-slider.scss
@@ -10,4 +10,5 @@
 "blocks/read-more-button",
 "blocks/section",
 "blocks/brands",
-"blocks/secondary-button";
+"blocks/secondary-button",
+"swiper-custom";
