--- a/css/blocks/_brands.scss
+++ b/css/blocks/_brands.scss
@@ -1,17 +1,46 @@
-.brands{
-  display: grid;
-  grid-template-columns: repeat(4,1fr);
-  column-gap: 32px;
-  row-gap: 16px;
-  height: 160px;
-  overflow: hidden;
-  transition: .5s;
+.brands {
 
-  @include tablet-above{
+  overflow: hidden;
+  position: relative;
+
+  &:after{
+    background: linear-gradient(270deg, #f8f8f8 0.04%, rgba(248, 248, 248, 0) 100%);;
+    content: '';
+    display: block;
+    height: 100%;
+    width: 24px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    @include mobile-above{
+      display: none;
+    }
+  }
+
+  &__list {
+
+    display: flex;
+
+    @include mobile-above{
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      column-gap: 32px;
+      row-gap: 16px;
+      height: 160px;
+      overflow: hidden;
+      transition: .5s;
+    }
+    @include tablet-above{
+      grid-template-columns: repeat(4, 1fr);
+    }
 
   }
 
-  &__item{
+  &__item {
+
+    width: 75vw;
+    flex-shrink: 0;
+
     align-items: center;
     background: #fff;
     border: 1px solid var(--color-gray-light);
@@ -21,9 +50,23 @@
     display: flex;
     height: 72px;
     padding-inline: 16px;
+
+    @include mobile-above{
+      width: auto;
+    }
   }
-  &--show{
+
+  &--show {
     height: 248px;
+  }
+
+  &--margin{
+    &--right{
+      margin-right: -24px;
+      @include mobile-above{
+        margin-right: 0;
+      }
+    }
   }
 }
 
