исправил путь к картинке

--- a/css/blocks/_secondary-button.scss
+++ b/css/blocks/_secondary-button.scss
@@ -1,5 +1,5 @@
 .secondary-button{
-  background: url("../../images/arrow-right.svg") no-repeat 50% 50%;
+  background: url("../images/arrow-right.svg") no-repeat 50% 50%;
   border-radius: 50%;
   border: 2px solid var(--color-pink);
   box-sizing: border-box;
